feat(chunk): 完善语义分块功能实现结构化切分
- 更新概念说明，详细阐述 token 切与语义切分的区别及实现原理
- 新增切割管线详解，包括标题切、空行切段落、软合并等步骤说明
- 实现 Java 后端结构切分 toSegments 逻辑，支持按 H1-H3 标题和空行分割
- 添加软合并 softMerge 机制，按目标大小打包同标题下的内容块
- 实现超长硬切 hardSplit 功能，在句号或换行处断开超长段落
- 前端新增 MarkdownBody 组件用于渲染完整命中正文内容
- 更新 SemanticChunkPanel 支持显示完整正文和源代码对比
- 添加 Markdown 样式定义，优化前端渲染效果
- 引入 react-markdown 依赖支持 Markdown 内容解析